Mudança nos botões finais.

--- a/botoes.html
+++ b/botoes.html
@@ -57,9 +57,22 @@
 
             </div>
             <button class="botao-secreto"
-                onclick="mostrarMensagem('Meus parabéns, você realmente conseguiu! Obrigado por participar, como agradecimento eu deixarei uma frase dita por Elon Musk: A persistência é muito importante. Você não deve desistir, a menos que seja forçado a desistir.                                                                                                            Créditos da página:                                                 Matheus Araújo de Souza                                            ')">
+                onclick="mostrarMensagem('ACHOU QUE TINHA GANHADO NÉ, boa tentativa mas não foi dessa vez >:v')">
+                Botão
+                Secreto</button>
+
+                <button class="botao-ultra-secreto"
+                onclick="mostrarMensagem('Você é insistente viu :/, quero ver se consegue adivinhar o botão certo agora!')">
+                BOTÃO
+                ULTRA SECRETO</button>
+                
+                <button class="botao-normal"
+                onclick="mostrarMensagem('Por que você clicaria em um botão tão desinteressante? :v')">
+                Botão normal</button>
+                <button class="botao-super-secreto">
                 <a href="./fim.html">BOTÃO
-                ESPECIAL</a></button>
+                SUPER SECRETO</a></button>
+
         </div>
     </main>
     <audio volume="0.5" autoplay loop>
