--- a/fim.html
+++ b/fim.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>FIM</h1>
-
-    <p>Não tem mais nada aqui ;-;</p>
+<p>Meus parabéns, você realmente conseguiu! Obrigado por participar, como agradecimento eu deixarei uma frase dita por Elon Musk: A persistência é muito importante. Você não deve desistir, a menos que seja forçado a desistir.</p>
+    <p class="nada">Não tem mais nada aqui ;-;</p>
 
     <audio autoplay>
         <source src="./src/audio/FNAF - 6 AM sound (320 kbps).mp3">
