--- a/fim.html
+++ b/fim.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="./src/css/fim.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FIM</title>
 </head>
+
 <body>
     <h1>FIM</h1>
-<p>Meus parabéns, você realmente conseguiu! Obrigado por participar, como agradecimento eu deixarei uma frase dita por Elon Musk: A persistência é muito importante. Você não deve desistir, a menos que seja forçado a desistir.</p>
+    <p>Meus parabéns, você realmente conseguiu! Obrigado por participar, como agradecimento eu deixarei uma frase dita
+        por Elon Musk, "A persistência é muito importante. Você não deve desistir, a menos que seja forçado a desistir."
+    </p>
     <p class="nada">Não tem mais nada aqui ;-;</p>
-<p>:p :/</p>
+    <p>:p :/</p>
     <audio autoplay>
         <source src="./src/audio/FNAF - 6 AM sound (320 kbps).mp3">
     </audio>
 </body>
+
 </html>
