--- a/botoes.html
+++ b/botoes.html
@@ -13,7 +13,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./src/css/responsivo.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
 
     <title>Encontre o botão</title>
 </head>
@@ -36,22 +36,23 @@
             <p class="titulo">Clique no <button class="botao-chave" onclick="mostrarBotao()">botão</button></p>
 
             <div class="botoes">
-                <button onclick="mostrarMensagem('Isso pode ser um pouco difícil, tente achar um botão com alguma dica ou guia ;/')">Botão</button>
+                <button
+                    onclick="mostrarMensagem('Isso pode ser um pouco difícil, tente achar um botão com alguma dica ou guia ;/')">Botão</button>
                 <button onclick="mostrarMensagem('..do..')">Quadrado</button>
                 <button class="pequeno" onclick="mostrarMensagem('Esse botão é pequeno demais ;-;')">botão</button>
                 <button onclick="mostrarMensagem('apenas um botão ;-;')">Botão</button>
                 <button onclick="mostrarMensagem('Clique...')">A</button>
                 <button onclick="mostrarMensagem('Quantidade de lados = número')">Botão</button>
-                <button
-                    onclick="mostrarMensagem('Leia da direita para a esquerda: !odarre oãtoB ')">oãtoB</button>
+                <button onclick="mostrarMensagem('Leia da direita para a esquerda: !odarre oãtoB ')">oãtoB</button>
                 <button onclick="mostrarMensagem('Toda letra representa um número')">Botão</button>
                 <button onclick="mostrarMensagem('That is a wrong button.')">Button</button>
                 <button onclick="mostrarMensagem('..Botão..')">Triângulo</button>
-                
+
                 <button onclick="mostrarMensagem('Ser ou não ser?')">Botão?</button>
                 <button onclick="mostrarMensagem('Anagrama: RRAEDO !')">oBãto</button>
                 <button onclick="mostrarMensagem('..título')">E</button>
-                <button onclick="mostrarMensagem('Aperte os botões na sequência certa!Talvez você descubra algo :p')">Botão</button>
+                <button
+                    onclick="mostrarMensagem('Aperte os botões na sequência certa!Talvez você descubra algo :p')">Botão</button>
                 <button onclick="mostrarMensagem('Traduza para árabe se quiser: الزر الخطأ')">زر</button>
                 <button onclick="mostrarMensagem('..no..')">2</button>
 
@@ -61,17 +62,17 @@
                 Botão
                 Secreto</button>
 
-                <button class="botao-ultra-secreto"
+            <button class="botao-ultra-secreto"
                 onclick="mostrarMensagem('Você é insistente viu :/, quero ver se consegue adivinhar o botão certo agora!')">
                 BOTÃO
                 ULTRA SECRETO</button>
-                
-                <button class="botao-normal"
+
+            <button class="botao-normal super-secreto"
                 onclick="mostrarMensagem('Por que você clicaria em um botão tão desinteressante? :v')">
                 Botão normal</button>
-                <button class="botao-super-secreto">
+            <button class="botao-super-secreto super-secreto">
                 <a href="./fim.html">BOTÃO
-                SUPER SECRETO</a></button>
+                    SUPER SECRETO</a></button>
 
         </div>
     </main>
