--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./src/img/favicon.ico" type="image/x-icon">
-    
+
     <link rel="stylesheet" href="./src/css/reset.css">
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/js/index.js">
@@ -14,7 +14,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="./src/css/responsivo.css">
+    <link rel="stylesheet" href="./src/css/responsivo.css">
     <title>Souza Home</title>
 </head>
 
@@ -37,8 +37,8 @@
             <button onclick="mostrarMensagem('Isso com certeza não é um botão ;-;')">
                 <h1>Clique para começar</h1>
             </button>
-            <button class="botao-iniciar" onclick="mostrarMensagem('Clique em ok se estiver preparado.')"><a target="_blank"
-                    href="./botoes.html">Iniciar</a></button>
+            <button class="botao-iniciar" onclick="mostrarMensagem('Clique em ok se estiver preparado.')"><a
+                    target="_blank" href="./botoes.html">Iniciar</a></button>
         </div>
     </main>
 
